# witas

./: Cargo.toml  README.md  build.rs  example.wtas
common/: Cargo.toml
common/src/: communication.rs  lib.rs  script.rs  tas.rs
common/src/witness/: windows_types.rs
doc/: game_types.md  tool_usage.md
gui/: Cargo.toml  build.rs
gui/src/: main.rs  widgets.rs
gui/src/platform/: linux.rs  mod.rs  windows.rs
injected/: Cargo.toml
injected/src/: hooks.rs  lib.rs  tas_player.rs
src/: communication.rs  hooks.rs  lib.rs  main.rs  script.rs  tas_player.rs  windows_input.rs
src/platform/: mod.rs  windows.rs
src/witness/: mod.rs  windows_types.rs  witness_types.rs
