[package]
name = "witness-tas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "witness_tas"
crate-type = ["cdylib"]

[dependencies]
retour = { version = "0.3", features = ["static-detour"] }
ctor = "0.2.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
region = "3.0.2"
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
]
