[package]
name = "witness-tas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "witness_tas"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "witness_tas_controller"
path = "src/main.rs"

[dependencies]
retour = { version = "0.3", features = ["static-detour"] }
ctor = "0.2.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
region = "3.0.2"
lazy_static = "1.4.0"
chumsky = "0.9.3"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
eframe = "0.27.2"
egui = "0.27.2"

[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
]
