[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "witness_tas_controller"
path = "src/main.rs"

[dependencies]
common = { path  = "../common" }
# injected = { path = "../injected", artifact = "cdylib" }
eframe = "0.27.2"
egui = "0.27.2"
tracing = "0.1.40"

[target.'cfg(windows)'.dependencies]
dll-syringe = "0.15.2"
